<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item android:id="@+id/item_info"
            android:title="@string/str_file_info"
            android:icon="@drawable/ic_info"
            app:showAsAction="always"/>
        <item android:id="@+id/item_share"
            android:title="@string/str_share"
            app:showAsAction="never"/>
        <item android:id="@+id/item_download"
            android:title="@string/str_download"
            app:showAsAction="never"/>
        <item android:id="@+id/item_compress"
            android:title="@string/str_compress"
            app:showAsAction="never"/>

        <item android:id="@+id/item_enable_crop"
            android:title="@string/enable_Crop"
            android:checkable="true"
            android:checked="false"
            app:actionViewClass="com.google.android.material.checkbox.MaterialCheckBox"
            app:showAsAction="never"/>

    </group>

</menu>